[package]
name = "oxidetracks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macros"
path = "macros/src/lib.rs"
proc-macro = true

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.18", features = ["macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.12", features = ["derive", "env"] }
git-version = "0.3.5"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_repr = "0.1.14"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
quote = "1.0.31"
syn = "2.0.26"
env_logger = "0.10.0"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
